--- a/workout-manager/src/app/app.component.html
+++ b/workout-manager/src/app/app.component.html
@@ -1,3 +1,7 @@
 <h1>{{title}}</h1>
-<app-workouts></app-workouts>
+<nav>
+    <a routerLink="/dashboard">Dashboard</a>
+    <a routerLink="/workouts">Workouts</a>
+</nav>
+<router-outlet></router-outlet>
 <app-messages></app-messages>
