--- a/workout-manager/src/app/workout-detail/workout-detail.component.html
+++ b/workout-manager/src/app/workout-detail/workout-detail.component.html
@@ -7,5 +7,5 @@
             <input [(ngModel)]="workout.name" placeholder="name" />
         </label>
     </div>
-
+    <button (click)="goBack()">go back</button>
 </div>
